# slfl

./: .gitignore  .gitmodules  Linear.hs  README.md  mailcode-tapl-lambda-calculus.hs  tapl-lambda-calculus.hs
STLC/: Check.hs  CoreSyntax.hs  Desugar.hs  Eval.hs  Evaluate.hs  Expression.hs  Lexer.hs  LinCheck.hs  LinearCheck.hs  LinearSequentCheck.hs  Main.hs  Parser.hs  Syntax.hs  TypeCheck.hs  run-tests.sh
STLLC/: Array.hs  Assert.hs  BST.hs  CHANGELOG.md  Desugar.hs  Eval.hs  Eval1.hs  Evaluate.hs  InferList.hs  InferMaybe.hs  List.hs  List.output  ListT.hs  Main.hs  Maybe.hs  Maybe.output  Parser.hs  RefinedTypes.hs  RefinementTypes.hs  Replicate.hs  Results.hs  STLLC.cabal  Simple.hs  State.hs  Syntax.hs  Synth.hs  SynthRef.hs  Tests.hs  Tree.hs  TreeG.hs  a.hs  benchmarks  benchres1.txt  benchres2.txt  benchres3.txt  cabal.project.local  ex.hs  exercise2.bash  exercise2.done  extratheorems.hs  (+16 more)
STLLC/app/: Constraints.hs  CoreSyntax.hs  Desugar.hs  Evaluate.hs  Lexer.hs  LinearCheck.hs  Main.hs  Minimize.hs  Parser.hs  Pretty.hs  Program.hs  Refinements.hs  Syntax.hs  Synth.hs  Typechecker.hs  Util.hs
STLLC/bench/: either1.hs  final-1-1.hs  final-1-2.hs  final-1-3.hs  final-1-4.hs  final-2-1.hs  final-2-2.hs  final-2-3.hs  final-2-4.hs  final-2-5.hs  final-2-6.hs  final-2-7.hs  final-3-1.hs  final-3-2.hs  final-4-1.hs  final-4-2.hs  final-4-3.hs  final-4-4.hs  final-4-5.hs  final-4-6.hs  final-4-7.hs  final-5-1.hs  final-6-1.hs  final-7-1.hs  list1.hs  list2.hs  list3.hs  list4.hs  list5.hs  list6.hs  list7.hs  list8.hs  llt1.hs  llt2.hs  llt3.hs  llt4.hs  map10.hs  map2.hs  map3.hs  map4.hs  (+14 more)
STLLC/llcprogs/: main-complete.llc  main.llc
STLLC/mymodules/: 1.ll  2.ll  3.ll  4.ll  5.ll
STLLC/tests/: array.correct  array.test  base-synth.correct  base-synth.test  base-type-infer.correct  base-type-infer.test  base-type.correct  base-type.test  desugar-app.test  desugar-bang.correct  desugar-bang.test  desugar-bool.correct  desugar-lambda.test  desugar-letin.correct  desugar-letin.test  desugar-tensor.correct  desugar-unit.test  desugar-var.correct  desugar-with.correct  desugar-with.test  eval1.test  evaluate.correct  how-to-test.md  list.correct  list.test  maybe.correct  maybe.test  parse-bang.test  parse-bool.correct  parse-if.correct  parse-if.test  parse-lambda.correct  parse-lambda.test  parse-letin.correct  parse-letin.test  parse-plus.correct  parse-plus.test  parse-tensor.correct  parse-tensor.test  parse-unit.correct  (+18 more)
STLLC/tests/support/: Array.hs  Eval1.hs  List.hs  Maybe.hs  Reverse.hs  State.hs  SynthRef.hs  base-type-infer.support  base-type.support  rec.support  synth-poly-1.support
article/: article.tex  cr.hs  (+3 more)
(+143 files in other folders)
