cabal-version:      2.4
name:               STLLC
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable STLLC
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        logict ^>=0.7.1.0,
        parsec ^>=3.1.14.0,
        mtl ^>=2.2.2,
        haskeline ^>=0.8.0.1

    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        CoreSyntax,
        Desugar,
        Evaluate,
        Lexer,
        LinearCheck,
        Parser,
        Syntax,
        Synth,
        Typechecker,
        Util
