cabal-version:      2.4
name:               STLLC
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

Test-Suite STLLC-testsuite
    type: detailed-0.9
    test-module: Tests
    build-depends: base, Cabal ^>=3.2.1.0


executable STLLC
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        mtl ^>=2.2.2,
        containers ^>=0.6.2.1,
        hashable ^>=1.3.1.0,
        parsec ^>=3.1.14.0,
        logict ^>=0.7.1.0,
        sbv ^>=8.15,
        criterion ^>=1.5.9.0,
        deepseq ^>=1.4.4.0
        pretty ^>= 1.1.3.6
    
    ghc-options:
        -Wunused-packages

    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        CoreSyntax,
        Desugar,
        Evaluate,
        Lexer,
        Parser,
        Syntax,
        Synth,
        Typechecker,
        Util,
        Constraints,
        Program,
        Minimize,
        Refinements

